--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.5.9",
     "@astrojs/mdx": "^2.2.0",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
     "astro": "^4.5.5",
-    "@astrojs/check": "^0.5.9",
+    "astro-link-preview": "^0.3.4",
     "typescript": "^5.4.2"
   }
 }
